<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Virus Clicker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_collection">Collection</string>
    <string name="title_clicking">Clicking Tab</string>
    <string name="title_shop">Shop</string>
    <string name="title_customization">Customize</string>
    <string name="Color">Color</string>
    <string name="Color2">Color2</string>
    <string name="homepage">Homepage</string>
    <string name="play_game">Play game</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Named">Disease Name</string>
    <string name="CustomizationCheck">You have remaining creations, press the button to begin creating</string>
    <string name="new_game">New Game</string>
    <string name="continue_game">Continue Game</string>
    <string name="viral_clicker">Viral\nClicker</string>
    <string name="unknown_virus">Name: ??????????</string>
    <string name="home_heading">Level %d.</string>
    <string-array name="virus_color">
        <item>color.black</item>
        <item>color.black</item>
        <item>color.black</item>
        <item>color.black</item>
        <item>color.black</item>
        <item>color.black</item>
        <item>color.black</item>
    </string-array>
    <string-array name="virus_type">
        <item>Bacteria</item>
        <item>Bacteria</item>
        <item>Bacteria</item>
        <item>Bacteria</item>
        <item>Bacteria</item>
        <item>Bacteria</item>
        <item>Bacteria</item>
    </string-array>
</resources>