<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.testing.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.testing.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_customization"
        android:name="com.example.testing.ui.customizationTab.CustomizationFragment"
        android:label="@string/title_customization"
        tools:layout="@layout/fragment_customization" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_customizationcheck"
            app:destination="@id/navigation_customizationcheck" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notHome"
        android:name="com.example.testing.ui.notHome.NotHomeFragment"
        android:label="Testing Fragment"
        tools:layout="@layout/fragment_nothome" />

    <fragment
        android:id="@+id/navigation_homepage"
        android:name="com.example.testing.ui.Homepage.HomepageFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_homepage"/>

    <fragment
        android:id="@+id/navigation_customizationcheck"
        android:name="com.example.testing.ui.customizationCheck.CustomizationCheckFragment"
        android:label="Customization Check"
        tools:layout="@layout/fragment_customizationcheck"
        >
        <action
            android:id="@+id/action_navigation_customizationcheck_to_navigation_notifications"
            app:destination="@id/navigation_customization" />
    </fragment>
</navigation>